2005-02-07 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/gcn_server.pl: Moved TCP/IP server into it's own thread and
          multi-threaded the response on callback. Basic building blocks
          complete, now actually have to write some filtering code.

        * Removed get_reference() from list of routines exported by singleton
          modules such as eSTAR::Process and eSTAR::Config. Should be called
          explicitly anyway using eSTAR::*::get_reference() because several of
          the single instance modules have this method we have namespace 
          clashes if you don't do it that way.
        
        * lib/perl5/GCN/Util.pm: Utility class for gcn_server.pl
        
        * Added .cvsignore files to all directories
        
        * Modified UA::Handler and JACH::Handler to deal with the new 
          <Target type=""></Target> tags generated by eSTAR::RTML. We now
          pass the observation type to the embedded agent so that if it's
          of type InitalBurstFollowup (etc) we can grab the templates
          directly from the OMP rather than parsing flat files.
          
        * lib/perl5/eSTAR/JACH/Handler.pm: Working using the new magic
          words method to retrieve the MSBs directly from the OMP rather
          than parsing flat file templates in the source directories.  
          
2005-02-04 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/gcn_server.pl: Working socket connection to GCN service that
          correctly accepts packets and send an ACK response. Does nothing
          with the packets except log their arrival.

2005-02-02 Aladair Allan <aa@astro.ex.ac.uk>

        * bin/gcn_server.pl: A program to accept incoming GCN packets. Basic
          framework for a server to recieve the GCN packets. It currently will
          recieve the packets correctly, but does not respond with the correct
          ACK message. Possibly something to do with the way I open and close
          the socket?
        