@@ -1,4 +1,13 @@
+2005-02-08 Aladair Allan <aa@astro.ex.ac.uk>
+
+        * Modified UA::Handler and JACH::Handler to deal with the new 
+          <Target type="" ident=""></Target> tags generated by the next
+          revision of eSTAR::RTML (v1.9.1). We now pass the observation type 
+          to the embedded agent via the "ident" attribute rather than the
+          "type" attribute. This causes less DTD breakage.
+          
 2005-02-07 Aladair Allan <aa@astro.ex.ac.uk>
+
 
         * bin/gcn_server.pl: Moved TCP/IP server into it's own thread and
           multi-threaded the response on callback. Basic building blocks
